Added validation;Added seed data in DBContext

--- a/Forum/appsettings.json
+++ b/Forum/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "Project": {
-    "ConnectionString": "Server=MAKSYM;Database=Forum;Trusted_Connection=True;",
+    "ConnectionString": "Server=MAKSYM;Database=Forum2;Trusted_Connection=True;",
     "ProjectName": "MF",
     "Phone": "+380973758821",
     "Mail": "maximgaber65@gmail.com"
